--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -27,6 +27,7 @@
                 android:paddingLeft="50dp"
                 android:paddingRight="50dp"
                 android:text="Switch" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -40,18 +41,34 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="Grip laps"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <SeekBar
-                android:id="@+id/gripSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="10"
-                android:progress="5"
-                android:progressTint="#DDBC95" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="Amount of different grips in a program" />
+
+                <SeekBar
+                    android:id="@+id/gripSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0"
+                    android:max="10"
+                    android:progress="5"
+                    android:progressTint="#DDBC95" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -63,22 +80,37 @@
 
             <EditText
                 android:id="@+id/hangLapsEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="Hang laps"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <SeekBar
-                android:id="@+id/hangSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="10"
-                android:progress="6"
-                android:progressTint="#B38867" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="In Repeaters, how many times to hang a single grip" />
+
+                <SeekBar
+                    android:id="@+id/hangSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:max="10"
+                    android:progress="6"
+                    android:progressTint="#B38867" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -91,22 +123,38 @@
 
             <EditText
                 android:id="@+id/timeONEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="Time on"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <SeekBar
-                android:id="@+id/timeONSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="20"
-                android:progress="6"
-                android:progressTint="@android:color/holo_red_dark" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="The actual hang time" />
+
+                <SeekBar
+                    android:id="@+id/timeONSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0"
+                    android:max="20"
+                    android:progress="6"
+                    android:progressTint="@android:color/holo_red_dark" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -118,23 +166,39 @@
 
             <EditText
                 android:id="@+id/timeOFFEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="Time off"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <SeekBar
-                android:id="@+id/timeOFFSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="10"
-                android:progress="3"
-                android:progressTint="@android:color/holo_green_light"
-                android:progressTintMode="src_over" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="In Repeaters, the small off time between hangs" />
+
+                <SeekBar
+                    android:id="@+id/timeOFFSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0"
+                    android:max="10"
+                    android:progress="3"
+                    android:progressTint="@android:color/holo_green_light"
+                    android:progressTintMode="src_over" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -147,22 +211,38 @@
 
             <EditText
                 android:id="@+id/setsEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="sets"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <SeekBar
-                android:id="@+id/setsSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="6"
-                android:progress="2"
-                android:progressTint="#626D71" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="Amount of times to do the whole set" />
+
+                <SeekBar
+                    android:id="@+id/setsSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0"
+                    android:max="6"
+                    android:progress="2"
+                    android:progressTint="#626D71" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -175,21 +255,36 @@
 
             <EditText
                 android:id="@+id/restEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="rest"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center" />
 
-            <SeekBar
-                android:id="@+id/restSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="20"
-                android:progress="14" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="Rest time between different grip types" />
+
+                <SeekBar
+                    android:id="@+id/restSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0"
+                    android:max="20"
+                    android:progress="14" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -202,21 +297,36 @@
 
             <EditText
                 android:id="@+id/longRestEditText"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:hint="long rest time"
-                android:inputType="numberSigned" />
+                android:inputType="numberSigned"
+                android:textAlignment="center" />
 
-            <SeekBar
-                android:id="@+id/longRestSeekBar"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:max="15"
-                android:progress="5" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="Long rest time between whole sets" />
+
+                <SeekBar
+                    android:id="@+id/longRestSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0"
+                    android:max="15"
+                    android:progress="5" />
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -231,12 +341,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/testEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberSigned" />
-
                 <Button
                     android:id="@+id/finishButton"
                     android:layout_width="wrap_content"
@@ -245,28 +349,6 @@
                     android:text="Finish Button" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:orientation="vertical">
-
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="morjes infoo kehiin" />
-
-                <Button
-                    android:id="@+id/testButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Button" />
-
-            </LinearLayout>
         </LinearLayout>
 
 
