--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,13 @@
         <ListView
             android:id="@+id/gradeListView"
             android:layout_width="50dp"
+
             android:layout_height="match_parent"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_weight="2"
+            android:choiceMode="singleChoice"
+            android:listSelector="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -104,7 +107,7 @@
                         android:id="@+id/durationTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Duration: 60min"
+                        android:text="Duration: 65min"
                         android:textSize="12sp" />
                 </LinearLayout>
 
