--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#661833</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#626d71</color>
+    <color name="slate">#626d71</color>
+    <color name="ceramic">#cdcdc0</color>
+    <color name="coffee">#977256</color>
 </resources>
