--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#626d71</color>
+    <color name="colorAccent">#661833</color>
     <color name="slate">#626d71</color>
     <color name="ceramic">#cdcdc0</color>
     <color name="coffee">#977256</color>
