Disabled premade settings when user saves her own time controls. Small ui changes to WorkoutActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     tools:context="com.example.laakso.hangboardapp.MainActivity"
+    android:orientation="horizontal"
     tools:layout_editor_absoluteY="81dp">
 
 
