--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="0dp"
-                    android:text="TextView"
+                    android:text="HOLD: , GRIP: , Difficulty: "
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="25dp" />
