Added context menu to th e holdsListView, now user can change the hold number and grip type of given hold

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -109,7 +109,7 @@ app:layout_scrollFlags="scroll|exitUntilCollapsed"
                         android:layout_height="match_parent"
                         android:fontFamily="sans-serif"
                         android:gravity="center_vertical"
-                        android:text="@string/matriisi"
+                        android:text="Matriisi"
                         android:textColor="@color/ceramic" />
 
                 </LinearLayout>
