--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
                     android:layout_weight="1"
-                    android:text="Randomize ALL" />
+                    android:text="New 5A Workout" />
 
                 <Button
                     android:id="@+id/startWorkoutBtn"
