locked main activity to horizontal view and added error messages if user sets out of bounds time controls

--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -53,14 +53,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="-15dp">
+                android:layout_marginTop="-5dp">
 
                 <TextView
                     android:id="@+id/gradTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="0dp"
                     android:text="HOLD: , GRIP: , Difficulty: "
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
@@ -84,7 +84,7 @@
         <LinearLayout
             android:layout_width="183dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="-50dp"
+            android:layout_marginLeft="-45dp"
             android:layout_marginRight="40dp"
             android:layout_weight="0"
             android:orientation="vertical"
