--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -108,7 +108,7 @@
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="In Repeaters, how many times to hang a single grip" />
+                    android:text="In Repeaters, how many times to hang a single grip (reps)" />
 
                 <SeekBar
                     android:id="@+id/hangSeekBar"
@@ -196,7 +196,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
-                    android:text="In Repeaters, the small off time between hangs" />
+                    android:text="In Repeaters, the small off time between hangs (reps)" />
 
                 <SeekBar
                     android:id="@+id/timeOFFSeekBar"
