--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,8 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
+            android:choiceMode="singleChoice"
+            android:listSelector="?attr/colorControlHighlight"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
