--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/darker_gray"
     android:keepScreenOn="true"
     android:orientation="horizontal"
-    tools:context="com.example.laakso.hangboardapp.WorkoutActivity">
+    tools:context="com.finn.laakso.hangboardapp.WorkoutActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,6 +34,7 @@
                     android:layout_width="420dp"
                     android:layout_height="180dp"
                     android:layout_marginRight="0dp"
+                    android:contentDescription="Hangboard"
                     android:paddingRight="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -64,7 +65,7 @@
                     android:text="HOLD: , GRIP: , Difficulty: "
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
-                    android:textSize="25dp" />
+                    android:textSize="25sp" />
 
                 <ProgressBar
                     android:id="@+id/hangProgressBar"
@@ -73,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:indeterminate="false"
-                    android:paddingBottom="3dp"
+                    android:paddingBottom="5dp"
                     android:paddingLeft="5dp"
                     android:scaleY="15"
                     android:visibility="visible" />
@@ -114,8 +115,7 @@
         android:elevation="0dp"
         android:text="pause"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/hangProgressBar" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Chronometer
         android:id="@+id/lapseTimeChrono"
@@ -130,7 +130,7 @@
         android:text="100"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="150dp"
+        android:textSize="150sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/pauseBtn"
         app:layout_constraintEnd_toEndOf="parent" />
