--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -2,12 +2,32 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     android:keepScreenOn="true"
     android:orientation="horizontal"
     tools:context="com.finn.laakso.hangboardapp.WorkoutActivity">
+
+    <ImageView
+        android:id="@+id/boardImageView"
+        android:layout_width="420dp"
+        android:layout_height="180dp"
+        android:layout_marginRight="0dp"
+        android:contentDescription="Hangboard"
+        android:focusableInTouchMode="true"
+        android:paddingRight="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rockprodigy" />
+
+    <com.finn.laakso.hangboardapp.PinchZoomImageView
+        android:visibility="visible"
+        android:id="@+id/pinchZoomImageView"
+        android:layout_width="420dp"
+        android:layout_height="180dp"
+        app:srcCompat="@drawable/beast1000" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,16 +49,8 @@
                 android:layout_width="420dp"
                 android:layout_height="180dp">
 
-                <ImageView
-                    android:id="@+id/boardImageView"
-                    android:layout_width="420dp"
-                    android:layout_height="180dp"
-                    android:layout_marginRight="0dp"
-                    android:contentDescription="Hangboard"
-                    android:paddingRight="0dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/rockprodigy" />
+
+
 
                 <ImageView
                     android:id="@+id/leftHandImageView"
