--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -12,21 +12,21 @@
 
     <ImageView
         android:id="@+id/boardImageView"
-        android:layout_width="420dp"
-        android:layout_height="180dp"
-        android:layout_marginRight="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:contentDescription="Hangboard"
         android:focusableInTouchMode="true"
         android:paddingRight="0dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/rockprodigy" />
 
     <com.finn.laakso.hangboardapp.PinchZoomImageView
-        android:visibility="visible"
         android:id="@+id/pinchZoomImageView"
-        android:layout_width="420dp"
-        android:layout_height="180dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
         app:srcCompat="@drawable/beast1000" />
 
     <LinearLayout
