--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -24,8 +24,8 @@
 
     <com.finn.laakso.hangboardapp.PinchZoomImageView
         android:id="@+id/pinchZoomImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:visibility="visible"
         app:srcCompat="@drawable/beast1000" />
 
@@ -72,8 +72,8 @@
                     android:id="@+id/gradTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="false"
+                    android:layout_alignParentTop="false"
                     android:text="HOLD: , GRIP: , Difficulty: "
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:indeterminate="false"
-                    android:paddingBottom="5dp"
+                    android:paddingBottom="3dp"
                     android:paddingLeft="5dp"
                     android:scaleY="15"
                     android:visibility="visible" />
